--- a/sic/templates/base.html
+++ b/sic/templates/base.html
@@ -25,6 +25,9 @@
                 <nav class="menu">
                     <ul>
                         <li><a href="{% url 'index' %}">Home</a></li>
+                        {% if request.user.is_authenticated %}
+                            <li><a href="{% url 'all_stories' %}">All stories</a></li>
+                        {% endif %}
                         <li><a href="{% url 'recent' %}">Recent</a></li>
                         <li><a href="{% url 'recent_comments' %}">Comments</a></li>
                         <li><a href="{% url 'browse_tags' %}">Tags</a></li>
