--- a/sic/templates/index.html
+++ b/sic/templates/index.html
@@ -3,6 +3,9 @@
 {% load utils %}
 {% block title %}sic{% endblock %}
 {% block content %}
+    {% if aggregations %}
+        <span class="showing-aggregations">Showing stories from <ul class="inline-comma-sep-list">{% for agg in aggregations.list %}<li><a href="{{ agg.get_absolute_url }}">{{ agg.name }}</a></li>{% if forloop.last and aggregations.others %}<li><details><summary>{{ aggregations.others|length }} others</summary>:<ul class="inline-comma-sep-list">{% for agg in aggregations.others %}<li><a href="{{ agg.get_absolute_url }}">{{ agg.name }}</a></li>{% endfor %}</ul></details></li>{% endif %}{% endfor %}</ul></span>
+    {% endif %}
     <ul class="posts">
         {% for story in stories %}
             {% include "story_list_item.html" with story=story %}
