Add statement of purpose PURPOSE.md + /about/purpose

--- a/sic/templates/about.html
+++ b/sic/templates/about.html
@@ -34,6 +34,7 @@
     <h1>about sic</h1>
     <nav>
         <ul>
+            <li><a href="{% url 'purpose' %}">Statement of Purpose</a></li>
             <li><a href="{% url 'about_privacy' %}">Privacy Policy</a></li>
             <li>IRC Channel: <code>#sic</code> on <a href="https://libera.chat/" rel="external nofollow">Libera Chat</a>, connect with an IRC client at <a href="ircs://irc.libera.chat:6697" rel="external nofollow"><code>ircs://irc.libera.chat:6697</code></a>, use a <a href="https://web.libera.chat/?channel=#sic">webclient</a> or the <a href="https://app.element.io/#/room/#sic:libera.chat" rel="external nofollow">Matrix bridge</a>.</li>
             <li>Source code: <a href="https://github.com/epilys/sic/">https://github.com/epilys/sic/</a></li>
