Make navbar header on mobile like lobste.rs
Concerns #7

--- a/sic/templates/about.html
+++ b/sic/templates/about.html
@@ -32,7 +32,7 @@
         </div>
     </div>
     <h1>about sic</h1>
-    <nav>
+    <nav class="menu">
         <ul>
             <li><a href="{% url 'purpose' %}">Statement of Purpose</a></li>
             <li><a href="{% url 'about_privacy' %}">Privacy Policy</a></li>
