--- a/sic/templates/edit_profile.html
+++ b/sic/templates/edit_profile.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Edit profile{% endblock %}
 {% block content %}
+    <h1>edit profile</h1>
     <form method="post" class="submit-story-form">
         {% csrf_token %}
         <table>
