--- a/sic/templates/edit_settings.html
+++ b/sic/templates/edit_settings.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Edit settings{% endblock %}
 {% block content %}
+    <h1>edit account settings</h1>
     <form action="" method="post" class="submit-story-form">
         {% csrf_token %}
         <table>
