--- a/sic/static/style.css
+++ b/sic/static/style.css
@@ -379,15 +379,28 @@ html, body {
 }
 
 body {
+  margin: 0 auto;
   min-width: 250px;
   display: grid;
-  grid-template-columns: clamp(250px, 80vw, 100%);
-  grid-auto-rows: min-content 1fr min-content;
+  grid-template-columns: repeat(12, minmax(10px, 1fr));
+  grid-auto-rows: auto 1fr auto;
   row-gap: min(6vw, 0.8rem);
+  width: 100%;
+  height: 100%;
   align-content: space-between;
-  width: clamp(25vw, 80vw, 100vw);
-  margin: 0 auto;
 }
+
+body>* {
+  grid-row: span 1;
+  grid-column: 2 / span 10;
+  max-width: 100%;
+}
+
+body>footer {
+  padding: .6rem;
+  width: 100%;
+}
+
 main {
   display: grid;
   grid-template-columns: 1fr;
@@ -433,11 +446,6 @@ body>header>nav>ul {
   margin: 0;
   width: 100%;
   padding: 0;
-}
-
-body>header>nav>ul>li {
-  flex-basis: max-content;
-  flex-grow: 1;
 }
 
 body>header>nav.user {
@@ -541,10 +549,12 @@ header>* {
   min-width: 0;
 }
 
-header .logo {
+header>div.logo {
+  transform: scale(175%);
+}
+header div.logo {
   font-weight: 800;
   background-color: #1e82be;
-  transform: scale(175%);
   color: white;
   border: 5px solid #1e82be;
   height: min-content;
@@ -940,7 +950,8 @@ th, td {
 }
 
 td input {
-  width: 98%;
+  width: max-content;
+  max-width: 98%;
 }
 
 th.subtable, td.subtable {
@@ -1154,4 +1165,33 @@ ul.inline-comma-sep-list>li>details>summary+ul.inline-comma-sep-list{
 
 span.showing-aggregations {
   font-size: 80%;
+}
+
+  body>header>div.logo {
+    display: inline-block;
+  }
+@media (max-width: 600px) {
+body>header>div.logo {
+  font-size: 70%;
+  border-width: 2px;
+}
+body>header {
+    margin: 0;
+    padding: .5rem 1.5rem;
+    background-color: #eee;
+    border-bottom: 1px solid #ccc;
+    grid-column: 1 / span 12;
+    column-gap: 12px;
+  } 
+  nav.menu>ul{
+    row-gap: 4px;
+    justify-content: left;
+  }
+  nav.menu>ul>li>a{
+    border: 1px inset gray;
+    background: white;
+    border-radius: 5px;
+    padding: 2px 5px;
+    display: inline-block;
+  }
 }
