--- a/sic/templates/edit_hat.html
+++ b/sic/templates/edit_hat.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Edit hat{% endblock %}
 {% block content %}
+    <h1>edit hat</h1>
     <div>
         <span>Current hat:
             <span class="hat" style="--hat-color: {{ hat.hex_color }}">{{ hat.name }}</span>
