--- a/sic/templates/base.html
+++ b/sic/templates/base.html
@@ -11,6 +11,22 @@
         <link rel="preload" href="/static/Inter-Regular.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" href="/static/Inter-Bold.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="stylesheet" href="/static/style.css">
+        {% if not show_colors %}
+            <style>
+                :root {
+                    --theme-color: black;
+                    --upvote-arrow-color: #c2c2c2;
+                    --upvote-arrow-upvoted-color: #000;
+                }
+                body {
+                    filter: grayscale(100%);
+                }
+
+                a, a:visited {
+                    color: black;
+                }
+            </style>
+        {% endif %}
         <link rel="alternate" type="application/rss+xml" href="{% url 'latest_stories_rss' %}" title="Latest Stories RSS">
         <link rel="alternate" type="application/atom+xml" href="{% url 'latest_stories_atom' %}" title="Latest Stories Atom">
         <title>{% block title %}sic{% endblock %}</title>
