--- a/sic/templates/comment.html
+++ b/sic/templates/comment.html
@@ -21,7 +21,7 @@
             </span>
         </span> <a href="{{ comment.user.get_absolute_url }}">{{ comment.user }}</a> <time datetime="{{ comment.created | date:"Y-m-d H:i:s" }}" title="{{ comment.created }}">{{ comment.created|naturaltime }}</time> | <a href="{{comment.get_absolute_url}}">link</a> | <label class="reply" for="reply-{{comment.pk}}"><a href="">reply</a></label>{% if show_story %} | on <a href="{{ comment.story.get_absolute_url }}">{{ comment.story.title }}</a>{% endif %} | <a href="{% url 'comment_source' comment.story.pk 'test' comment.pk %}">source</a>
             {% if comment.hat %}
-                <span class="hat" style="--hat-color: {{ comment.hat.hex_color }}">{{ comment.hat.name }}</span>
+                <span class="hat" style="{% if show_colors %}--hat-color: {{ comment.hat.hex_color }}{% endif %}">{{ comment.hat.name }}</span>
             {% endif %}
         </span>
         <span class="comment">{{ comment.text_to_html }}</span>
