--- a/sic/templates/account.html
+++ b/sic/templates/account.html
@@ -180,4 +180,26 @@
             {% endfor %}
         </ul>
     </div>
+    <div>
+        <h2>Personalised feeds</h2>
+        <form method="GET" action="{% url_with_next 'issue_token' request %}">
+            <input type="submit" value="{% if user.auth_token%}re{% endif %}issue token">
+        </form>
+        {% if not user.auth_token %}
+            <p>You have no auth tokens, generate one!</p>
+        {% else %}
+            <nav class="feeds">
+                <ul>
+                    <li>
+                        RSS
+                        <a href="{% if user.username %}{% url 'user_feeds_rss' user.username %}{% else %}{% url 'user_feeds_rss' user.pk %}{% endif %}?token={{ user.auth_token|urlencode }}" title="Latest Stories RSS" class="feed"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-rss-fill" viewBox="0 0 16 16"> <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm1.5 2.5c5.523 0 10 4.477 10 10a1 1 0 1 1-2 0 8 8 0 0 0-8-8 1 1 0 0 1 0-2zm0 4a6 6 0 0 1 6 6 1 1 0 1 1-2 0 4 4 0 0 0-4-4 1 1 0 0 1 0-2zm.5 7a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/> </svg></a>
+                    </li>
+                    <li>
+                        Atom
+                        <a href="{% if user.username %}{% url 'user_feeds_atom' user.username %}{% else %}{% url 'user_feeds_atom' user.pk %}{% endif %}?token={{ user.auth_token|urlencode }}" title="Latest Stories Atom" class="feed"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-rss" viewBox="0 0 16 16"><path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/><path d="M5.5 12a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm-3-8.5a1 1 0 0 1 1-1c5.523 0 10 4.477 10 10a1 1 0 1 1-2 0 8 8 0 0 0-8-8 1 1 0 0 1-1-1zm0 4a1 1 0 0 1 1-1 6 6 0 0 1 6 6 1 1 0 1 1-2 0 4 4 0 0 0-4-4 1 1 0 0 1-1-1z"/></svg></a>
+                    </li>
+                </ul>
+            </nav>
+        {% endif %}
+    </div>
 {% endblock %}
