--- a/sic/templates/base.html
+++ b/sic/templates/base.html
@@ -90,7 +90,7 @@
             {% spaceless %}
                 <nav class="menu">
                     <ul>
-                        <li>Moderation Log</li>
+                        <li><a href="{% url 'moderation_log' %}">Moderation Log</a></li>
                         <li><a href="{% url 'about' %}">About</a></li>
                         <li>{% cache 99999 build_sha %}{% build_sha %}{% endcache %}</li>
                     </ul>
