--- a/sic/templates/submit.html
+++ b/sic/templates/submit.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 {% block title %}submit story{% endblock %}
 {% block content %}
-<form action="" method="post" class="submit-story-form">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Submit">
-</form>
+    <form action="" method="post" class="submit-story-form">
+        <input type="submit" name="fetch-title" value="fetch title">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="Submit">
+    </form>
 {% endblock %}
