Add missing titles to templates
Closes #12

--- a/sic/templates/profile.html
+++ b/sic/templates/profile.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load utils %}
-{% block title %}sic{% endblock %}
+{% block title %}{{user}} profile - sic{% endblock %}
 {% block content %}
     <div class="profile">
         <div id="avatar">
