--- a/sic/templates/recent_comments.html
+++ b/sic/templates/recent_comments.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load humanize %}
-{% block title %}sic{% endblock %}
+{% block title %}recent comments | sic{% endblock %}
 {% block content %}
     <ul class="posts">
         {% for comment in comments %}
