--- a/sic/templates/browse_aggs.html
+++ b/sic/templates/browse_aggs.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load humanize %}
 {% load utils %}
-{% block title %}sic{% endblock %}
+{% block title %}browse aggregations - sic{% endblock %}
 {% block content %}
     <nav>
         <ul>
