--- a/sic/templates/inbox.html
+++ b/sic/templates/inbox.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}sic{% endblock %}
+{% block title %}message inbox - sic{% endblock %}
 {% block content %}
     <h1>Inbox</h1>
     <nav class="menu">
