--- a/sic/templates/taggregation.html
+++ b/sic/templates/taggregation.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load humanize %}
 {% load utils %}
-{% block title %}sic{% endblock %}
+{% block title %}{{ taggregation.name }} aggregation - sic{% endblock %}
 {% block content %}
     {% spaceless %}
         <h1>{{ taggregation.name }}{% if user_can_modify %} <small><a href="{% url_with_next 'edit_aggregation' taggregation.pk taggregation.slugify request %}">edit&hellip;</a></small>{% endif %}</h1>
