--- a/sic/static/style.css
+++ b/sic/static/style.css
@@ -1289,3 +1289,13 @@ span.color-box {
   margin: 0px 10px;
   vertical-align: middle;
 }
+
+pre {
+  --bg-color: #e9e9e9;
+  background: var(--bg-color);
+  outline: 5px solid var(--bg-color);
+  width: min-content;
+  overflow: auto;
+  max-width: 100%;
+  padding: 2px 7px;
+}
