--- a/sic/templates/base.html
+++ b/sic/templates/base.html
@@ -38,39 +38,35 @@
                 <div class="logo">
                     <span>sic</span>
                 </div>
-                <nav class="menu">
+                <nav class="main menu">
                     <ul>
                         <li><a href="{% url 'index' %}">Home</a></li>
-                        {% if request.user.is_authenticated %}
-                            <li><a href="{% url 'all_stories' %}">All stories</a></li>
-                        {% endif %}
+                        <li><a href="{% url 'all_stories' %}">All stories</a></li>
                         <li><a href="{% url 'recent' %}">Recent</a></li>
                         <li><a href="{% url 'recent_comments' %}">Comments</a></li>
                         <li><a href="{% url 'browse_tags' %}">Tags</a></li>
-                        {% if request.user.is_authenticated %}
-                            <li><a href="{% url 'submit' %}">Submit story</a></li>
-                        {% endif %}
                         <li><a href="{% url 'search' %}">Search</a></li>
                     </ul>
                 </nav>
                 {% if request.user.is_authenticated %}
                     <nav class="menu user">
                         <ul>
-                            <li><a href="{% url 'account' %}">{{ request.user }}</a></li>
                             {% with request.user.active_notifications as notifications %}
                                 {% if notifications|length > 0 %}
                                     <li class="notification"><a href="{% url 'notifications' %}">{{ notifications|length }} notification{{ notifications|pluralize }}</a></li>
                                 {% endif %}
                             {% endwith %}
+                            <li class="username"><a href="{% url 'account' %}">{{ request.user }}</a></li>
+                            <li><a href="{% url 'submit' %}">Post</a></li>
                             <li><a href="{% url 'inbox' %}">Inbox{% if unread_messages and unread_messages > 0 %} ({{ unread_messages }}){% endif %}</a></li>
-                            <li><a href="{% url_with_next 'logout' request %}">logout</a></li>
+                            <li><a href="{% url_with_next 'logout' request %}">Logout</a></li>
                         </ul>
                     </nav>
                 {% else %}
                     <nav class="menu user">
                         <ul>
                             <li><a href="{% url_with_next 'login' request %}">Login</a></li>
-                            <li><details id="signup-details" title="You will need an invitation from an existing user to join."><summary><a href="">Sign up</a></summary></details></li>
+                            <li><details id="signup-details" title="You will need an invitation from an existing user to join. Try joining our irc channel, #sic at libera.chat. See About page for more details."><summary><a href="">Sign up</a></summary><div>You will need an invitation from an existing user to join.<br/><br/>Try <a href="{% url 'about' %}">joining our irc channel, #sic at libera.chat</a>.</div></details></li>
                         </ul>
                     </nav>
                 {% endif %}
